Stop activating the Python environment
Stop activating the Python environment
in the terminal created with the extension.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,5 +50,6 @@
             "editor.formatOnSave": true,
             "editor.formatOnSaveMode": "file",
         },
+        "python.terminal.activateEnvironment": false
     }
 }
