--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,25 @@
 default_stages: [push]
 repos:
+  # - repo: https://github.com/iterative/dvc
+  #   # use a specific version (e.g. 1.8.1) instead of master if you don't want
+  #   # to use the upstream version
+  #   rev: 2.9.3
+  #   hooks:
+  #     - id: dvc-pre-commit
+  #       language_version: python3
+  #       stages:
+  #         - commit
+  #     - id: dvc-pre-push
+  #       # use s3/gs/etc instead of all to only install specific cloud support
+  #       additional_dependencies: [".[s3]", ".[gdrive]"]
+  #       language_version: python3
+  #       stages:
+  #         - push
+  #     - always_run: true
+  #       id: dvc-post-checkout
+  #       language_version: python3
+  #       stages:
+  #         - post-checkout
   - repo: local
     hooks:
       - id: style-reformat
